2010-08-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/fill.el (justify-current-line): Don't add 1 to nspaces
	when justifying.  It seems useless and harmful for ncols=1 (bug#6738).

	* emacs-lisp/timer.el (timer-event-handler): Protect against timers
	that change current buffer.

2010-08-01  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* mouse.el (mouse-fixup-help-message): Match "mouse-2" only at the
	beginning of the string.  Use `string-match-p'.  (Bug#6765)

2010-08-01  Jan Djärv  <jan.h.d@swipnet.se>

	* cus-start.el (x-gtk-use-system-tooltips): New variable.

2010-08-01  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/package.el (package--list-packages): Fix column alignment.
	(package--builtins): Tweak descriptions.
	(package-print-package): Upcase descriptions if necessary.
	Show all built-in packages in font-lock-builtin-face.
	(package-list-packages-internal): Omit "emacs" package.
	Show status of built-in packages as "built-in".

2010-07-31  Chong Yidong  <cyd@stupidchicken.com>

	* mouse.el (mouse-save-then-kill): Doc fix.  Deactivate mark
	before killing to preserve the primary selection (Bug#6701).

	* term/x-win.el (x-select-text): Doc fix.

2010-07-31  Nathaniel Flath  <flat0103@gmail.com>

	Enhance Java Mode to handle Java 5.0 (Tiger) and Java 6 (Mustang).
	The following functions were modified or created:

	* progmodes/cc-vars.el (c-offsets-alist, c-inside-block-syms)
	(objc-font-lock-extra-types):
	* progmodes/cc-mode.el (c-basic-common-init):
	* progmodes/cc-langs.el (c-make-mode-syntax-table)
	(c++-make-template-syntax-table)
	(c-identifier-syntax-modifications, c-symbol-start, c-operators)
	(c-<-op-cont-regexp, c->-op-cont-regexp, c-class-decl-kwds)
	(c-brace-list-decl-kwds, c-modifier-kwds, c-prefix-spec-kwds-re)
	(c-type-list-kwds, c-decl-prefix-re, c-opt-type-suffix-key):
	* progmodes/cc-fonts.el (c-make-inverse-face)
	(c-basic-matchers-after):
	* progmodes/cc-engine.el (c-forward-keyword-clause)