@@ -1,5 +1,8 @@
 2010-08-02  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* frame.el (screen-height, screen-width, set-screen-width)
+	(set-screen-height): Remove ancient compatibility aliases.
+
 	* textmodes/fill.el (justify-current-line): Don't add 1 to nspaces
 	when justifying.  It seems useless and harmful for ncols=1 (bug#6738).
 
